# GradientspaceCore

./: CMakeLists.txt  CMakePresets.json  GradientspaceCore.Build.cs  LICENSE  README.md
Private/: GradientspaceCoreDLLMain.cpp  GradientspaceCoreModule.cpp
Private/Color/: GSColorBlending.cpp  GSColorConversion.cpp
Private/Core/: BinaryIO.cpp  GSError.cpp  TextIO.cpp  gs_parallel_api.cpp  gs_serializer.cpp  packed_int_lists.cpp
Private/Grid/: GSGridUtil.cpp  GSSubGridMask2.cpp
Private/Image/: GSImage.cpp  GSPixelPainting.cpp  GSSurfacePainting.cpp
Private/Intersection/: GSRayBoxIntersection.cpp
Private/Math/: GSTriangle2.cpp
Private/Mesh/: DenseMesh.cpp  MeshTopology.cpp  PolyMesh.cpp  TriangleMesh2.cpp  TriangleMeshAttributes.cpp
Private/Sampling/: GSNoise.cpp  ImageSampling.cpp  SurfaceTexelSampling.cpp
Private/Spatial/: AxisBoxTree2.cpp
Public/: GradientspaceCoreModule.h  GradientspacePlatform.h
Public/Color/: GSColor3b.h  GSColorBlending.h  GSColorConversion.h  GSIntColor4.h
Public/Core/: BinaryIO.h  FunctionRef.h  GSAsync.h  GSError.h  GSResult.h  GSTag.h  ParallelFor.h  SharedPointer.h  TextIO.h  UniquePointer.h  buffer_view.h  dynamic_buffer.h  gs_allocator.h  gs_debug.h  gs_parallel_api.h  gs_serialize_utils.h  gs_serializer.h  object_priority_queue.h  packed_int_lists.h  rle_buffer.h  unsafe_vector.h
Public/Grid/: GSAtomicGrid3.h  GSFixedGrid3.h  GSGridUtil.h  GSSubGridMask2.h
Public/Image/: GSImage.h  GSPixelPainting.h  GSSurfacePainting.h
Public/Intersection/: GSRayBoxIntersection.h
Public/Mapping/: GenericExpMap.h
Public/Math/: GSAxisBox2.h  GSAxisBox3.h  GSFrame3.h  GSHash.h  GSIndex2.h  GSIndex3.h  GSIndex4.h  GSIntAxisBox2.h  GSIntAxisBox3.h  GSIntVector2.h  GSIntVector3.h  GSIntVector4.h  GSMath.h  GSMatrix2.h  GSMatrix3.h  GSQuaternion.h  GSRandom.h  GSRay3.h  GSSegment2.h  GSTransformList.h  GSTriangle2.h  GSVector2.h  GSVector3.h  GSVector4.h  GSVectorMath.h
Public/Mesh/: DenseMesh.h  GenericMeshAPI.h  MeshAttributeUtils.h  MeshTopology.h  MeshTypes.h  MeshView2.h  PolyMesh.h  PolyMeshAttributes.h  TriangleMesh2.h  TriangleMeshAttributes.h
Public/Sampling/: GSNoise.h  ImageSampling.h  SurfaceTexelSampling.h
Public/Spatial/: AxisBoxTree2.h  SpatialResult2.h
